# virtual-space-robots

./: Cargo.toml  docs.md
godot/: icon.svg.import  project.gdextension  project.godot  test.tscn
rust/: Cargo.toml
rust/src/: lib.rs  ship_controller.rs
src/: assets.rs  bullet.rs  collision.rs  main.rs  object.rs  rock.rs  ship.rs
src/ship/: api.rs
test/: cheatbot.bean  dadbot.bean  edward.bean  fortnite.bean  forward.bean  froot_snax.bean  hunter.bean  lurker.bean  nike.bean  raphi.bean  shybot.bean  skybot.bean  smart_turret.bean  static.bean  turret.bean
