[package]
name = "virtual_space_robots" # Appears in the filename of the compiled dynamic library.
version = "0.1.0"     # You can leave version and edition as-is for now.
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
bean-script = "0.1.3"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
